--- a/code/generate_stocks_diff_approach_final_maybe.ipynb
+++ b/code/generate_stocks_diff_approach_final_maybe.ipynb
@@ -111,6 +111,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def calculate_quantity_to_arrive(group):\n",
+    "    group['Quantity_to_arrive'] = group.groupby('Next_Restock_Day')['Quantity'].transform('sum')\n",
+    "    return group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the current directory and file name\n",
     "current_directory = os.getcwd()\n",
     "file_name = f'{current_directory}/../datasets/cigarettes_treated.feather'"
@@ -174,6 +185,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "operation = operation.groupby(['Store_ID2', 'Product_ID']).apply(calculate_quantity_to_arrive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Calculate the current stock\n",
     "operation['Current_Stock'] = operation.apply(lambda row: row['Quantity_to_arrive'] + 10 if row['Date'] == row['Date_min'] else 0, axis=1)\n"
    ]
@@ -225,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
